RESOLVED FIXED52641
WebKit2: Do not assert that the provisional and committed URLs cannot be empty/null
https://bugs.webkit.org/show_bug.cgi?id=52641
Summary WebKit2: Do not assert that the provisional and committed URLs cannot be empt...
Jessie Berlin
Reported 2011-01-18 10:42:12 PST
"WebKit2: Do not assert that the provisional and committed URLs cannot be empty/null"
Attachments
Patch that removes a few assertions. (1.81 KB, patch)
2011-01-18 10:48 PST, Jessie Berlin
no flags
Jessie Berlin
Comment 1 2011-01-18 10:44:45 PST
Jessie Berlin
Comment 2 2011-01-18 10:48:28 PST
Created attachment 79295 [details] Patch that removes a few assertions.
Jessie Berlin
Comment 3 2011-01-18 11:08:56 PST
Comment on attachment 79295 [details] Patch that removes a few assertions. Fixed in r76040 http://trac.webkit.org/changeset/76040
Note You need to log in before you can comment on or make changes to this bug.