WebKit2: Do not assert that the provisional and committed URLs cannot be empty/null https://bugs.webkit.org/show_bug.cgi?id=52641

Reviewed by Darin Adler.

* UIProcess/WebFrameProxy.cpp:
(WebKit::WebFrameProxy::didStartProvisionalLoad):
(WebKit::WebFrameProxy::didCommitLoad):
(WebKit::WebFrameProxy::didFinishLoad):



git-svn-id: svn://svn.chromium.org/blink/trunk@76040 bbb929c8-8fbe-4397-9dbb-9b2b20218538