third_party/WebKit/Source/WebKit2/UIProcess/WebFrameProxy.cpp
@@ -118,7 +118,6 @@ bool WebFrameProxy::isDisplayingMarkupDocument() const
 
 void WebFrameProxy::didStartProvisionalLoad(const String& url)
 {
-    ASSERT(!url.isEmpty());
     ASSERT(m_loadState == LoadStateFinished);
     ASSERT(m_provisionalURL.isEmpty());
     m_loadState = LoadStateProvisional;
@@ -144,7 +143,6 @@ void WebFrameProxy::didFailProvisionalLoad()
 void WebFrameProxy::didCommitLoad(const String& contentType, const PlatformCertificateInfo& certificateInfo)
 {
     ASSERT(m_loadState == LoadStateProvisional);
-    ASSERT(!m_provisionalURL.isEmpty());
     m_loadState = LoadStateCommitted;
     m_url = m_provisionalURL;
     m_provisionalURL = String();
@@ -158,7 +156,6 @@ void WebFrameProxy::didFinishLoad()
 {
     ASSERT(m_loadState == LoadStateCommitted);
     ASSERT(m_provisionalURL.isEmpty());
-    ASSERT(!m_url.isEmpty());
     m_loadState = LoadStateFinished;
 }
 
